[project]
name = "ave-test-case"
version = "1.0.0"
description = "Микросервис для управления связками телефон-адрес с кешированием в Redis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "python-dotenv>=1.0.1",
    "redis>=6.1.1",
    "uvicorn>=0.33.0",
    "uvloop>=0.21.0",
]
